[package]
name = "rustdom-x"
version = "1.1.0"
edition = "2024"
description = "A fully rust RandomX implementation"
license = "GPL-3.0"
repository = "https://github.com/snap-coin/rustdom-x"

[dependencies]
blake2b_simd = "1.0.4"
log = "0.4.29"
rustdom-x-argon2 = "2.1.0"
strum = { version = "0.24.0", features = ["derive"] }

[dev-dependencies]
difference = "2.0.0"
hex = "0.4"
lazy_static = "1.5.0"
